--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
+spring.datasource.url= jdbc:postgresql://localhost:5432/spotify_api
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/spotify_api?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=1234
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
